fixed horizontal scroll issue for mobile and some other styles

--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ body{
   margin:0px 40px 0px 0px;
   font-size: 90px;
   position: absolute;
-  top:170px;
+  top:210px;
   right:20px;
   letter-spacing: 6px;
   color:#00ba8a;
@@ -139,7 +139,7 @@ a{
 @media only screen and (max-width:900px){
   #name{
     font-size: 70px;
-    top:190px;
+    top:240px;
     right:5px;
   }
   .projectBox{
@@ -165,6 +165,7 @@ a{
     position: relative;
     top:35px;
     left:60px;
+    width:300px;
   }
   #navBar{
     width:100%;
